--- a/public/site/templates/assets/styles/_base.scss
+++ b/public/site/templates/assets/styles/_base.scss
@@ -31,7 +31,7 @@ h1, h2, h3, h4, h5, h6, p, figure, ul, li {
   margin: 0;
   padding: 0;
   margin-bottom: $space-2;
-  color: $gray-darker;
+  color: $gray-dark;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: $headings-font-family;
