--- a/public/site/templates/assets/styles/3-organisims/_j-header.scss
+++ b/public/site/templates/assets/styles/3-organisims/_j-header.scss
@@ -75,6 +75,7 @@ header.main-nav {
           margin-bottom: 0;
           color: $gray-dark;
           font-weight: bold;
+          font-size: 18px;
         }
         .active {
           color: $color-greenlight;
